--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Closing Credits
 subtitle: Music for television, movies, video games, and more
 description: 
 author: Eric Patrick
-language: en
+language: default
 timezone: America/New_York
 
 # URL
